Improve statistical reporting in figs 3 and 4

--- a/TBS_paper/figure3_chromhmm.ipynb
+++ b/TBS_paper/figure3_chromhmm.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ronan/_xenopus-aging/xenopus-aging/A DNA methylation clock for Xenopus frogs/dnam_preprocessing.py:67: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "/Users/ronan/_xenopus-aging/xenopus-aging/A DNA methylation clock for Xenopus frogs/dnam_preprocessing.py:67: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n"
+      "/Users/ronan/_xenopus-aging/xenopus-aging/TBS_paper/dnam_preprocessing.py:68: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "/Users/ronan/_xenopus-aging/xenopus-aging/TBS_paper/dnam_preprocessing.py:68: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +100,7 @@
        "      <th>p</th>\n",
        "      <th>p_adj_bonf</th>\n",
        "      <th>p_adj_bh</th>\n",
+       "      <th>oddsratio</th>\n",
        "      <th>stars</th>\n",
        "      <th>signed_neg_log10_p_adj_bh</th>\n",
        "      <th>nudge_direction</th>\n",
@@ -118,6 +119,7 @@
        "      <td>1.406045e-23</td>\n",
        "      <td>2.109067e-22</td>\n",
        "      <td>2.109067e-22</td>\n",
+       "      <td>0.301006</td>\n",
        "      <td>*</td>\n",
        "      <td>-21.675910</td>\n",
        "      <td>-0.2</td>\n",
@@ -134,6 +136,7 @@
        "      <td>5.955829e-07</td>\n",
        "      <td>8.933744e-06</td>\n",
        "      <td>2.233436e-06</td>\n",
+       "      <td>2.183224</td>\n",
        "      <td>*</td>\n",
        "      <td>5.651026</td>\n",
        "      <td>0.1</td>\n",
@@ -150,6 +153,7 @@
        "      <td>3.506918e-02</td>\n",
        "      <td>5.260376e-01</td>\n",
        "      <td>7.514823e-02</td>\n",
+       "      <td>1.473462</td>\n",
        "      <td></td>\n",
        "      <td>1.124081</td>\n",
        "      <td>0.1</td>\n",
@@ -166,6 +170,7 @@
        "      <td>3.760863e-08</td>\n",
        "      <td>5.641295e-07</td>\n",
        "      <td>1.880432e-07</td>\n",
+       "      <td>2.422469</td>\n",
        "      <td>*</td>\n",
        "      <td>6.725742</td>\n",
        "      <td>0.1</td>\n",
@@ -182,6 +187,7 @@
        "      <td>5.144435e-02</td>\n",
        "      <td>7.716653e-01</td>\n",
        "      <td>9.645816e-02</td>\n",
+       "      <td>0.385375</td>\n",
        "      <td></td>\n",
        "      <td>-1.015661</td>\n",
        "      <td>-0.2</td>\n",
@@ -198,6 +204,7 @@
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
+       "      <td>0.964817</td>\n",
        "      <td></td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-0.2</td>\n",
@@ -214,6 +221,7 @@
        "      <td>8.655550e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
+       "      <td>0.879861</td>\n",
        "      <td></td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-0.2</td>\n",
@@ -230,6 +238,7 @@
        "      <td>2.763866e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>4.145800e-01</td>\n",
+       "      <td>0.272672</td>\n",
        "      <td></td>\n",
        "      <td>-0.382392</td>\n",
        "      <td>-0.2</td>\n",
@@ -246,6 +255,7 @@
        "      <td>4.330416e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>5.905113e-01</td>\n",
+       "      <td>1.673286</td>\n",
        "      <td></td>\n",
        "      <td>0.228772</td>\n",
        "      <td>0.1</td>\n",
@@ -262,6 +272,7 @@
        "      <td>2.080439e-02</td>\n",
        "      <td>3.120659e-01</td>\n",
        "      <td>5.201098e-02</td>\n",
+       "      <td>2.201587</td>\n",
        "      <td></td>\n",
        "      <td>1.283905</td>\n",
        "      <td>0.1</td>\n",
@@ -278,6 +289,7 @@
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
+       "      <td>0.994081</td>\n",
        "      <td></td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-0.2</td>\n",
@@ -294,6 +306,7 @@
        "      <td>1.854045e-08</td>\n",
        "      <td>2.781067e-07</td>\n",
        "      <td>1.390534e-07</td>\n",
+       "      <td>7.749912</td>\n",
        "      <td>*</td>\n",
        "      <td>6.856819</td>\n",
        "      <td>0.1</td>\n",
@@ -310,6 +323,7 @@
        "      <td>1.272574e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>2.120957e-01</td>\n",
+       "      <td>1.669856</td>\n",
        "      <td></td>\n",
        "      <td>0.673468</td>\n",
        "      <td>0.1</td>\n",
@@ -326,6 +340,7 @@
        "      <td>3.477225e-04</td>\n",
        "      <td>5.215837e-03</td>\n",
        "      <td>1.043167e-03</td>\n",
+       "      <td>5.775274</td>\n",
        "      <td>*</td>\n",
        "      <td>2.981646</td>\n",
        "      <td>0.1</td>\n",
@@ -342,6 +357,7 @@
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
+       "      <td>0.972299</td>\n",
        "      <td></td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-0.2</td>\n",
@@ -358,6 +374,7 @@
        "      <td>4.968619e-42</td>\n",
        "      <td>7.452928e-41</td>\n",
        "      <td>7.452928e-41</td>\n",
+       "      <td>0.517667</td>\n",
        "      <td>*</td>\n",
        "      <td>-40.127673</td>\n",
        "      <td>-0.2</td>\n",
@@ -374,6 +391,7 @@
        "      <td>6.131435e-28</td>\n",
        "      <td>9.197153e-27</td>\n",
        "      <td>4.598576e-27</td>\n",
+       "      <td>2.094847</td>\n",
        "      <td>*</td>\n",
        "      <td>26.337377</td>\n",
        "      <td>0.1</td>\n",
@@ -390,6 +408,7 @@
        "      <td>8.607850e-06</td>\n",
        "      <td>1.291177e-04</td>\n",
        "      <td>3.227944e-05</td>\n",
+       "      <td>1.435358</td>\n",
        "      <td>*</td>\n",
        "      <td>4.491074</td>\n",
        "      <td>0.1</td>\n",
@@ -406,6 +425,7 @@
        "      <td>2.039650e-21</td>\n",
        "      <td>3.059474e-20</td>\n",
        "      <td>1.019825e-20</td>\n",
+       "      <td>2.000486</td>\n",
        "      <td>*</td>\n",
        "      <td>19.991474</td>\n",
        "      <td>0.1</td>\n",
@@ -422,6 +442,7 @@
        "      <td>4.508115e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>6.762172e-01</td>\n",
+       "      <td>0.886842</td>\n",
        "      <td></td>\n",
        "      <td>-0.169914</td>\n",
        "      <td>-0.2</td>\n",
@@ -438,6 +459,7 @@
        "      <td>6.862293e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>8.070998e-01</td>\n",
+       "      <td>0.917963</td>\n",
        "      <td></td>\n",
        "      <td>-0.093073</td>\n",
        "      <td>-0.2</td>\n",
@@ -454,6 +476,7 @@
        "      <td>4.097702e-02</td>\n",
        "      <td>6.146553e-01</td>\n",
        "      <td>8.780789e-02</td>\n",
+       "      <td>0.711091</td>\n",
        "      <td></td>\n",
        "      <td>-1.056466</td>\n",
        "      <td>-0.2</td>\n",
@@ -470,6 +493,7 @@
        "      <td>1.779633e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>2.966055e-01</td>\n",
+       "      <td>1.320551</td>\n",
        "      <td></td>\n",
        "      <td>0.527821</td>\n",
        "      <td>0.1</td>\n",
@@ -486,6 +510,7 @@
        "      <td>3.999425e-02</td>\n",
        "      <td>5.999138e-01</td>\n",
        "      <td>8.780789e-02</td>\n",
+       "      <td>1.716691</td>\n",
        "      <td></td>\n",
        "      <td>1.056466</td>\n",
        "      <td>0.1</td>\n",
@@ -502,6 +527,7 @@
        "      <td>1.538314e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>2.884339e-01</td>\n",
+       "      <td>1.281823</td>\n",
        "      <td></td>\n",
        "      <td>0.539954</td>\n",
        "      <td>0.1</td>\n",
@@ -518,6 +544,7 @@
        "      <td>8.335577e-04</td>\n",
        "      <td>1.250337e-02</td>\n",
        "      <td>2.500673e-03</td>\n",
+       "      <td>0.726107</td>\n",
        "      <td>*</td>\n",
        "      <td>-2.601943</td>\n",
        "      <td>-0.2</td>\n",
@@ -534,6 +561,7 @@
        "      <td>7.532932e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>8.070998e-01</td>\n",
+       "      <td>1.093693</td>\n",
        "      <td></td>\n",
        "      <td>0.093073</td>\n",
        "      <td>0.1</td>\n",
@@ -550,6 +578,7 @@
        "      <td>8.529959e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>8.529959e-01</td>\n",
+       "      <td>1.035715</td>\n",
        "      <td></td>\n",
        "      <td>0.069053</td>\n",
        "      <td>0.1</td>\n",
@@ -566,6 +595,7 @@
        "      <td>7.003929e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>8.070998e-01</td>\n",
+       "      <td>1.108741</td>\n",
        "      <td></td>\n",
        "      <td>0.093073</td>\n",
        "      <td>0.1</td>\n",
@@ -582,6 +612,7 @@
        "      <td>5.429438e-01</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>7.403779e-01</td>\n",
+       "      <td>0.746898</td>\n",
        "      <td></td>\n",
        "      <td>-0.130547</td>\n",
        "      <td>-0.2</td>\n",
@@ -623,37 +654,37 @@
        "13   E14              bivalent low      8  neg  0.004195    1.108285   \n",
        "14   E15           active promoter      9  neg  0.004719    0.748093   \n",
        "\n",
-       "    log_enrichment             p    p_adj_bonf      p_adj_bh stars  \\\n",
-       "0        -1.081496  1.406045e-23  2.109067e-22  2.109067e-22     *   \n",
-       "1         0.972195  5.955829e-07  8.933744e-06  2.233436e-06     *   \n",
-       "2         0.508561  3.506918e-02  5.260376e-01  7.514823e-02         \n",
-       "3         1.120189  3.760863e-08  5.641295e-07  1.880432e-07     *   \n",
-       "4        -1.347704  5.144435e-02  7.716653e-01  9.645816e-02         \n",
-       "5        -0.050544  1.000000e+00  1.000000e+00  1.000000e+00         \n",
-       "6        -0.179827  8.655550e-01  1.000000e+00  1.000000e+00         \n",
-       "7        -1.863005  2.763866e-01  1.000000e+00  4.145800e-01         \n",
-       "8         0.737332  4.330416e-01  1.000000e+00  5.905113e-01         \n",
-       "9         1.111728  2.080439e-02  3.120659e-01  5.201098e-02         \n",
-       "10       -0.007854  1.000000e+00  1.000000e+00  1.000000e+00         \n",
-       "11        2.899183  1.854045e-08  2.781067e-07  1.390534e-07     *   \n",
-       "12        0.723657  1.272574e-01  1.000000e+00  2.120957e-01         \n",
-       "13        2.504045  3.477225e-04  5.215837e-03  1.043167e-03     *   \n",
-       "14       -0.040275  1.000000e+00  1.000000e+00  1.000000e+00         \n",
-       "0        -0.533933  4.968619e-42  7.452928e-41  7.452928e-41     *   \n",
-       "1         0.923549  6.131435e-28  9.197153e-27  4.598576e-27     *   \n",
-       "2         0.474773  8.607850e-06  1.291177e-04  3.227944e-05     *   \n",
-       "3         0.888685  2.039650e-21  3.059474e-20  1.019825e-20     *   \n",
-       "4        -0.168144  4.508115e-01  1.000000e+00  6.762172e-01         \n",
-       "5        -0.120857  6.862293e-01  1.000000e+00  8.070998e-01         \n",
-       "6        -0.480260  4.097702e-02  6.146553e-01  8.780789e-02         \n",
-       "7         0.395988  1.779633e-01  1.000000e+00  2.966055e-01         \n",
-       "8         0.773934  3.999425e-02  5.999138e-01  8.780789e-02         \n",
-       "9         0.351863  1.538314e-01  1.000000e+00  2.884339e-01         \n",
-       "10       -0.428459  8.335577e-04  1.250337e-02  2.500673e-03     *   \n",
-       "11        0.128430  7.532932e-01  1.000000e+00  8.070998e-01         \n",
-       "12        0.049765  8.529959e-01  1.000000e+00  8.529959e-01         \n",
-       "13        0.148329  7.003929e-01  1.000000e+00  8.070998e-01         \n",
-       "14       -0.418711  5.429438e-01  1.000000e+00  7.403779e-01         \n",
+       "    log_enrichment             p    p_adj_bonf      p_adj_bh  oddsratio stars  \\\n",
+       "0        -1.081496  1.406045e-23  2.109067e-22  2.109067e-22   0.301006     *   \n",
+       "1         0.972195  5.955829e-07  8.933744e-06  2.233436e-06   2.183224     *   \n",
+       "2         0.508561  3.506918e-02  5.260376e-01  7.514823e-02   1.473462         \n",
+       "3         1.120189  3.760863e-08  5.641295e-07  1.880432e-07   2.422469     *   \n",
+       "4        -1.347704  5.144435e-02  7.716653e-01  9.645816e-02   0.385375         \n",
+       "5        -0.050544  1.000000e+00  1.000000e+00  1.000000e+00   0.964817         \n",
+       "6        -0.179827  8.655550e-01  1.000000e+00  1.000000e+00   0.879861         \n",
+       "7        -1.863005  2.763866e-01  1.000000e+00  4.145800e-01   0.272672         \n",
+       "8         0.737332  4.330416e-01  1.000000e+00  5.905113e-01   1.673286         \n",
+       "9         1.111728  2.080439e-02  3.120659e-01  5.201098e-02   2.201587         \n",
+       "10       -0.007854  1.000000e+00  1.000000e+00  1.000000e+00   0.994081         \n",
+       "11        2.899183  1.854045e-08  2.781067e-07  1.390534e-07   7.749912     *   \n",
+       "12        0.723657  1.272574e-01  1.000000e+00  2.120957e-01   1.669856         \n",
+       "13        2.504045  3.477225e-04  5.215837e-03  1.043167e-03   5.775274     *   \n",
+       "14       -0.040275  1.000000e+00  1.000000e+00  1.000000e+00   0.972299         \n",
+       "0        -0.533933  4.968619e-42  7.452928e-41  7.452928e-41   0.517667     *   \n",
+       "1         0.923549  6.131435e-28  9.197153e-27  4.598576e-27   2.094847     *   \n",
+       "2         0.474773  8.607850e-06  1.291177e-04  3.227944e-05   1.435358     *   \n",
+       "3         0.888685  2.039650e-21  3.059474e-20  1.019825e-20   2.000486     *   \n",
+       "4        -0.168144  4.508115e-01  1.000000e+00  6.762172e-01   0.886842         \n",
+       "5        -0.120857  6.862293e-01  1.000000e+00  8.070998e-01   0.917963         \n",
+       "6        -0.480260  4.097702e-02  6.146553e-01  8.780789e-02   0.711091         \n",
+       "7         0.395988  1.779633e-01  1.000000e+00  2.966055e-01   1.320551         \n",
+       "8         0.773934  3.999425e-02  5.999138e-01  8.780789e-02   1.716691         \n",
+       "9         0.351863  1.538314e-01  1.000000e+00  2.884339e-01   1.281823         \n",
+       "10       -0.428459  8.335577e-04  1.250337e-02  2.500673e-03   0.726107     *   \n",
+       "11        0.128430  7.532932e-01  1.000000e+00  8.070998e-01   1.093693         \n",
+       "12        0.049765  8.529959e-01  1.000000e+00  8.529959e-01   1.035715         \n",
+       "13        0.148329  7.003929e-01  1.000000e+00  8.070998e-01   1.108741         \n",
+       "14       -0.418711  5.429438e-01  1.000000e+00  7.403779e-01   0.746898         \n",
        "\n",
        "    signed_neg_log10_p_adj_bh  nudge_direction  \n",
        "0                  -21.675910             -0.2  \n",
@@ -698,7 +729,7 @@
        "<Figure size 720x576 with 1 Axes>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {
       "image/png": {
        "height": 576,
@@ -749,6 +780,7 @@
     "def compute_fisher(test_counts, baseline_counts, labels):\n",
     "    ps = []\n",
     "    bons = []\n",
+    "    ors = []\n",
     "    for k in labels:\n",
     "        # Create a 2x2 table for each category. \n",
     "        # E.g for the chromatin state k:\n",
@@ -761,14 +793,15 @@
     "        oddsratio, p_value = stats.fisher_exact(table)\n",
     "        bon = min(p_value*len(pos_counts), 1.0)\n",
     "        # print(f\"{k} {E_annotation[k]}: Odds Ratio: {oddsratio}, P-value: {p_value}, Bonferroni P: {bon}\")\n",
+    "        ors.append(oddsratio)\n",
     "        ps.append(p_value)\n",
     "        bons.append(bon)\n",
     "        \n",
     "    bhs = stats.false_discovery_control(ps)\n",
-    "    return ps, bons, bhs\n",
+    "    return ps, bons, bhs, ors\n",
     "\n",
-    "pos_df['p'], pos_df['p_adj_bonf'], pos_df['p_adj_bh'] = compute_fisher(pos_counts, all_counts, labels)\n",
-    "neg_df['p'], neg_df['p_adj_bonf'], neg_df['p_adj_bh'] = compute_fisher(neg_counts, all_counts,labels)\n",
+    "pos_df['p'], pos_df['p_adj_bonf'], pos_df['p_adj_bh'], pos_df['oddsratio'] = compute_fisher(pos_counts, all_counts, labels)\n",
+    "neg_df['p'], neg_df['p_adj_bonf'], neg_df['p_adj_bh'], neg_df['oddsratio'] = compute_fisher(neg_counts, all_counts,labels)\n",
     "for df in [pos_df, neg_df]:\n",
     "    df['stars'] = df['p_adj_bh'].apply(lambda x: '*' if x < 0.05 else '')\n",
     "    fdrs = []\n",
@@ -803,6 +836,76 @@
     "        + labs(y=\"Log$_{2}$ Enrichment\"))\n",
     "\n",
     "plot.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     80\n",
+       "1     61\n",
+       "2     35\n",
+       "3     57\n",
+       "4      4\n",
+       "5      7\n",
+       "6      8\n",
+       "7      1\n",
+       "8      3\n",
+       "9     11\n",
+       "10    27\n",
+       "11    14\n",
+       "12     9\n",
+       "13     7\n",
+       "14     2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_df['count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     13171\n",
+       "1      2419\n",
+       "2      1914\n",
+       "3      2040\n",
+       "4       792\n",
+       "5       564\n",
+       "6       705\n",
+       "7       283\n",
+       "8       140\n",
+       "9       396\n",
+       "10     2112\n",
+       "11      146\n",
+       "12      424\n",
+       "13       96\n",
+       "14      160\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df['count']"
    ]
   },
   {
