--- a/TBS_paper/figure4_expression.ipynb
+++ b/TBS_paper/figure4_expression.ipynb
@@ -61,11 +61,11 @@
      "output_type": "stream",
      "text": [
       "18491 total trop ids with corresponding laev ids \n",
-      "e.g tropid_to_laevid multiset entry ('XBXT10g018392', {'Xelaev18000001m.g', 'Xelaev18036521m.g', 'Xelaev18038061m.g', 'Xelaev18004535m.g', 'Xelaev18036214m.g', 'Xelaev18036520m.g', 'Xelaev18003427m.g', 'Xelaev18003428m.g', 'Xelaev18036213m.g'})\n",
+      "e.g tropid_to_laevid multiset entry ('XBXT10g018392', {'Xelaev18038061m.g', 'Xelaev18036213m.g', 'Xelaev18003427m.g', 'Xelaev18004535m.g', 'Xelaev18003428m.g', 'Xelaev18000001m.g', 'Xelaev18036214m.g', 'Xelaev18036520m.g', 'Xelaev18036521m.g'})\n",
       "\n",
       "22254 laevid_to_laevgene_df len \n",
       "\n",
-      "some atlas gene symbols ['loc100493300.1.L', 'fbn1.L', 'l1cam.S', 'loc398404.S', 'ltb.L', 'Xetrov90028968m.L', 'loc100495139.L', 'gkn1.S', 'adipoq.L', 'Xetrov90018651m.S', 'Xelaev18045314m.g', 'mmp2.S']\n",
+      "some atlas gene symbols ['pfkfb4.S', 'dcn.L', 'slc5a7-like.2.L', 'cryaa.S', 'neurl3.L', 'Xelaev18003427m.g', 'Xelaev18003790m.g', 'gpm6a.L', 'l1cam.S', 'col4a6-like.L', 'erp27.L', 'kcnj13.S']\n",
       "len(atlas_gene_symbols) 3000\n",
       "len(atlas_raw_gene_symbols) 30877\n",
       "\n",
@@ -140,9 +140,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ronan/_xenopus-aging/xenopus-aging/A DNA methylation clock for Xenopus frogs/dnam_preprocessing.py:67: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "/Users/ronan/_xenopus-aging/xenopus-aging/TBS_paper/dnam_preprocessing.py:68: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
       "  ad_out.obs['Site'] = list(ad_out.obs_names)\n",
-      "/Users/ronan/_xenopus-aging/xenopus-aging/A DNA methylation clock for Xenopus frogs/dnam_preprocessing.py:67: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "/Users/ronan/_xenopus-aging/xenopus-aging/TBS_paper/dnam_preprocessing.py:68: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
       "  ad_out.obs['Site'] = list(ad_out.obs_names)\n"
      ]
     },
@@ -294,22 +294,22 @@
      "output_type": "stream",
      "text": [
       "TOP EXP\n",
-      "Bladder 0.8586207514275915 ((37,), (30877,))\n",
-      "Bone Marrow 0.91564106089861 ((37,), (30877,))\n",
-      "Brain 0.9236720985025666 ((37,), (30877,))\n",
-      "Eye 0.408185876070128 ((37,), (30877,))\n",
-      "Heart 0.5166065763662826 ((37,), (30877,))\n",
-      "Intestine 0.480492755011416 ((37,), (30877,))\n",
-      "Kidney 0.7650441713515672 ((37,), (30877,))\n",
-      "Liver 0.711640587205124 ((37,), (30877,))\n",
-      "Lung 0.8341876601470715 ((37,), (30877,))\n",
-      "Muscle 0.6717775084535069 ((37,), (30877,))\n",
-      "Ovary 0.8431346758243461 ((37,), (30877,))\n",
-      "Oviduct 0.5433752270026582 ((37,), (30877,))\n",
-      "Pancreas 0.9978798171596484 ((37,), (30877,))\n",
-      "Skin 0.6884756530765566 ((37,), (30877,))\n",
-      "Spleen 0.4965600321094268 ((37,), (30877,))\n",
-      "Stomach 0.7747084492043375 ((37,), (30877,))\n",
+      "Bladder 561604.0 0.8586207514275915 ((37,), (30877,))\n",
+      "Bone Marrow 565578.5 0.91564106089861 ((37,), (30877,))\n",
+      "Brain 576417.5 0.9236720985025666 ((37,), (30877,))\n",
+      "Eye 616018.0 0.408185876070128 ((37,), (30877,))\n",
+      "Heart 606271.0 0.5166065763662826 ((37,), (30877,))\n",
+      "Intestine 533252.5 0.480492755011416 ((37,), (30877,))\n",
+      "Kidney 555098.0 0.7650441713515672 ((37,), (30877,))\n",
+      "Liver 551340.0 0.711640587205124 ((37,), (30877,))\n",
+      "Lung 582526.5 0.8341876601470715 ((37,), (30877,))\n",
+      "Muscle 594063.5 0.6717775084535069 ((37,), (30877,))\n",
+      "Ovary 581916.0 0.8431346758243461 ((37,), (30877,))\n",
+      "Oviduct 603919.5 0.5433752270026582 ((37,), (30877,))\n",
+      "Pancreas 571080.5 0.9978798171596484 ((37,), (30877,))\n",
+      "Skin 592326.5 0.6884756530765566 ((37,), (30877,))\n",
+      "Spleen 534765.0 0.4965600321094268 ((37,), (30877,))\n",
+      "Stomach 555768.0 0.7747084492043375 ((37,), (30877,))\n",
       "Bladder 0.9852502384027377 \n",
       "Bone Marrow 0.9852502384027377 \n",
       "Brain 0.9852502384027377 \n",
@@ -328,22 +328,22 @@
       "Stomach 0.9852502384027377 \n",
       "-----\n",
       "BOTTOM EXP\n",
-      "Bladder 0.12317178329105007 ((208,), (30877,))\n",
-      "Bone Marrow 0.8531789220511382 ((208,), (30877,))\n",
-      "Brain 4.949637572845981e-07 ((208,), (30877,))\n",
-      "Eye 1.0339167698342889e-05 ((208,), (30877,))\n",
-      "Heart 0.0020083970224675602 ((208,), (30877,))\n",
-      "Intestine 0.40503040846248284 ((208,), (30877,))\n",
-      "Kidney 0.12059696240108836 ((208,), (30877,))\n",
-      "Liver 0.6176687282331108 ((208,), (30877,))\n",
-      "Lung 0.007555168487552443 ((208,), (30877,))\n",
-      "Muscle 0.004282503897214924 ((208,), (30877,))\n",
-      "Ovary 0.010824265858090869 ((208,), (30877,))\n",
-      "Oviduct 0.02907779275445622 ((208,), (30877,))\n",
-      "Pancreas 0.012381960908805015 ((208,), (30877,))\n",
-      "Skin 0.22468541832114874 ((208,), (30877,))\n",
-      "Spleen 0.7541866094407625 ((208,), (30877,))\n",
-      "Stomach 0.007653183791498994 ((208,), (30877,))\n",
+      "Bladder 3409154.0 0.12317178329105007 ((208,), (30877,))\n",
+      "Bone Marrow 3234658.0 0.8531789220511382 ((208,), (30877,))\n",
+      "Brain 3859127.5 4.949637572845981e-07 ((208,), (30877,))\n",
+      "Eye 3779052.0 1.0339167698342889e-05 ((208,), (30877,))\n",
+      "Heart 3608064.0 0.0020083970224675602 ((208,), (30877,))\n",
+      "Intestine 3317760.5 0.40503040846248284 ((208,), (30877,))\n",
+      "Kidney 3410348.0 0.12059696240108836 ((208,), (30877,))\n",
+      "Liver 3275046.0 0.6176687282331108 ((208,), (30877,))\n",
+      "Lung 3554113.0 0.007555168487552443 ((208,), (30877,))\n",
+      "Muscle 3577298.0 0.004282503897214924 ((208,), (30877,))\n",
+      "Ovary 3538546.5 0.010824265858090869 ((208,), (30877,))\n",
+      "Oviduct 3490371.0 0.02907779275445622 ((208,), (30877,))\n",
+      "Pancreas 3532345.5 0.012381960908805015 ((208,), (30877,))\n",
+      "Skin 3363156.5 0.22468541832114874 ((208,), (30877,))\n",
+      "Spleen 3251129.0 0.7541866094407625 ((208,), (30877,))\n",
+      "Stomach 3553631.5 0.007653183791498994 ((208,), (30877,))\n",
       "[0.12317178329105007, 0.8531789220511382, 4.949637572845981e-07, 1.0339167698342889e-05, 0.0020083970224675602, 0.40503040846248284, 0.12059696240108836, 0.6176687282331108, 0.007555168487552443, 0.004282503897214924, 0.010824265858090869, 0.02907779275445622, 0.012381960908805015, 0.22468541832114874, 0.7541866094407625, 0.007653183791498994]\n",
       "[1.79158958e-01 8.53178922e-01 7.91942012e-06 8.27133416e-05\n",
       " 1.07114508e-02 4.98498964e-01 1.79158958e-01 7.05907118e-01\n",
@@ -466,7 +466,7 @@
     "    # t_out = stats.ttest_ind(x,y, equal_var=False)  # Welch's\n",
     "    t_out = stats.mannwhitneyu(x, y, alternative='two-sided')\n",
     "    ps.append(t_out.pvalue)\n",
-    "    print(tissue, t_out.pvalue, (x.shape,y.shape))\n",
+    "    print(tissue, t_out.statistic, t_out.pvalue, (x.shape,y.shape))\n",
     "p_adj = stats.false_discovery_control(ps, method='bh')\n",
     "for p, tissue in zip(p_adj, tissues):\n",
     "    print(tissue, p, '*' if p < 0.05 else '')\n",
@@ -480,7 +480,7 @@
     "    # t_out = stats.ttest_ind(x,y, equal_var=False)  # Welch's\n",
     "    t_out = stats.mannwhitneyu(x, y, alternative='two-sided')\n",
     "    ps.append(t_out.pvalue)\n",
-    "    print(tissue, t_out.pvalue, (x.shape,y.shape))\n",
+    "    print(tissue, t_out.statistic, t_out.pvalue, (x.shape,y.shape))\n",
     "print(ps)\n",
     "p_adj = stats.false_discovery_control(ps, method='bh')\n",
     "print(p_adj)\n",
@@ -560,6 +560,13 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
